--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,18 @@
   body {
     overflow:hidden;
   }
+
+  .video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+  }
+  
+  .video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
